--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,8 @@
-# Core FastAPI and web framework
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
-
-# Data processing and analysis
-pandas==2.2.2
-numpy==1.26.4
-scipy==1.12.0
-
-# Financial data
-yfinance==0.2.40
-
-# Configuration and utilities
-PyYAML==6.0.2
-python-dateutil==2.9.0.post0
-
-# Performance optimizations
-numba==0.59.0              # JIT compilation for numerical functions
-bottleneck==1.3.8          # Fast NumPy array functions
-
-# Additional data sources (optional)
-requests==2.31.0
-aiohttp==3.9.3
-
-# Caching for performance
-diskcache==5.6.3
-
-# Better error tracking
-sentry-sdk==1.40.0
-
-# Development and testing
-pytest==8.0.2
-pytest-asyncio==0.23.5
-httpx==0.27.0
+pandas>=1.3.0
+numpy>=1.20.0
+yfinance>=0.1.87
+matplotlib>=3.5.0
+seaborn>=0.11.0
+requests>=2.25.0
+python-dateutil>=2.8.0
+scikit-learn>=1.0.0
