--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,12 @@
--pandas>=1.3.0
--numpy>=1.20.0
--yfinance>=0.1.87
--matplotlib>=3.5.0
--seaborn>=0.11.0
--requests>=2.25.0
--python-dateutil>=2.8.0
--scikit-learn>=1.0.0
--uvicorn>=0.15.0
-+pandas>=1.3.0
-+numpy>=1.20.0
-+yfinance>=0.1.87
-+matplotlib>=3.5.0
-+seaborn>=0.11.0
-+requests>=2.25.0
-+python-dateutil>=2.8.0
-+scikit-learn>=1.0.0
-+uvicorn>=0.15.0
-+fastapi>=0.110.0
-+PyYAML>=6.0
-+pydantic>=2.5.0
+pandas>=1.3.0
+numpy>=1.20.0
+yfinance>=0.1.87
+matplotlib>=3.5.0
+seaborn>=0.11.0
+requests>=2.25.0
+python-dateutil>=2.8.0
+scikit-learn>=1.0.0
+uvicorn>=0.15.0
+fastapi>=0.110.0
+PyYAML>=6.0
+pydantic>=2.5.0
