--- a/config.yaml
+++ b/config.yaml
@@ -41,3 +41,4 @@ max_fill_days: 5         # Max days to forward fill missing data
 download_batch_size: 100 # Tickers per batch for yfinance
 max_retries: 3          # Retry attempts for failed downloads
 request_delay: 0.1      # Delay between requests (seconds)
+min_avg_turnover_cr: 10.0   # require ₹10 Cr average daily turnover over last 60 sessions
