--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas>=1.3.0
-numpy>=1.20.0
-yfinance>=0.1.87
-matplotlib>=3.5.0
-seaborn>=0.11.0
-requests>=2.25.0
-python-dateutil>=2.8.0
-scikit-learn>=1.0.0
-uvicorn>=0.15.0
-fastapi>=0.110.0
-PyYAML>=6.0
-pydantic>=2.5.0
+# requirements.txt
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pandas==2.2.2
+numpy==1.26.4
+yfinance==0.2.43
+PyYAML==6.0.2
+requests==2.32.3
+tzdata==2024.1
+python-dateutil==2.9.0.post0
+# optional but recommended for production serving on Render:
+gunicorn==22.0.0
